Fix empty state action button icon spacing

--- a/src/app/kitchen-sink/kitchen-sink.component.scss
+++ b/src/app/kitchen-sink/kitchen-sink.component.scss
@@ -70,3 +70,12 @@ mat-card.ng-comp-card {
         margin: 8px !important;
     }
 }
+
+[dir='rtl'] .empty-state-action-icon {
+    margin-right: -4px;
+    margin-left: 8px;
+}
+.empty-state-action-icon {
+    margin-right: 8px;
+    margin-left: -4px;
+}
